// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders an ECS cluster with tags 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"resource\\": {
    \\"aws_ecs_cluster\\": {
      \\"testECSCluster_ecs_cluster_E3A9AFE5\\": {
        \\"name\\": \\"bowling-\\",
        \\"tags\\": {
          \\"name\\": \\"maude\\",
          \\"description\\": \\"artist\\"
        },
        \\"setting\\": [
          {
            \\"name\\": \\"containerInsights\\",
            \\"value\\": \\"enabled\\"
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testECSCluster/ecs_cluster\\",
            \\"uniqueId\\": \\"testECSCluster_ecs_cluster_E3A9AFE5\\"
          }
        }
      }
    }
  }
}"
`;

exports[`renders an ECS cluster without tags 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"resource\\": {
    \\"aws_ecs_cluster\\": {
      \\"testECSCluster_ecs_cluster_E3A9AFE5\\": {
        \\"name\\": \\"bowling-\\",
        \\"setting\\": [
          {
            \\"name\\": \\"containerInsights\\",
            \\"value\\": \\"enabled\\"
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testECSCluster/ecs_cluster\\",
            \\"uniqueId\\": \\"testECSCluster_ecs_cluster_E3A9AFE5\\"
          }
        }
      }
    }
  }
}"
`;
